--- a/style.css
+++ b/style.css
@@ -460,6 +460,7 @@ nav .fa-solid{
 @media only screen and (max-width: 600px) {
     #header{
         background-image: url(images/New\ Project.jpg);
+        height: 100vh; 
 
     }
     .header-text{
